how to import modules

--- a/modules.ipynb
+++ b/modules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "4377a891",
    "metadata": {},
    "outputs": [
@@ -16,24 +16,38 @@
     }
    ],
    "source": [
-    "from math import ceil, fsum, fabs\n",
+    "import math\n",
     "\n",
     "print(math.ceil(1.2)) #ceil : 반올림\n",
-    "print(math.fabs(-1.2)) #절댓값"
+    "print(math.fabs(-1.2)) #절대값"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0768dde8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "28.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import ceil, fsum\n",
+    "\n",
+    "print(ceil(1.2))\n",
+    "print(fsum([1,2,3,4,5,6,7]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a97425",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0768dde8",
+   "id": "ffeff946",
    "metadata": {},
    "outputs": [],
    "source": []
